UI trang THẢO LUẬN NHÓM

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 
 .wrapper-body{
-  @apply lg:w-[1280px] mt-20 mx-auto mb-0 overflow-hidden;
+  @apply lg:w-[1280px] mt-6 mx-2 mb-0 overflow-hidden;
 }
 
 /* navbar */
