--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,15 @@
   @apply lg:w-[1280px] mt-24 mx-auto mb-0 overflow-hidden;
 }
 
+.bg-custome {
+  background-image: url('./assets/images/mainBg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+
 /* navbar */
 .menuItem {
   @apply relative hover:text-black;
